--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@typescript-eslint/parser": "^5.4.0",
+    "@vicons/ionicons4": "^0.11.0",
     "axios": "^0.24.0",
     "eslint": "^8.3.0",
     "eslint-plugin-vue": "^8.1.1",
