--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@typescript-eslint/parser": "^5.4.0",
     "@vicons/ionicons4": "^0.11.0",
     "axios": "^0.24.0",
+    "dayjs": "^1.10.7",
     "eslint": "^8.3.0",
     "eslint-plugin-vue": "^8.1.1",
     "naive-ui": "^2.21.1",
