--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build --emptyOutDir",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "eslint:fix": "eslint --ext .ts,.js,.vue ./src --fix"
   },
   "dependencies": {
     "@typescript-eslint/parser": "^5.4.0",
@@ -12,6 +13,7 @@
     "axios": "^0.24.0",
     "dayjs": "^1.10.7",
     "eslint": "^8.3.0",
+    "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-vue": "^8.1.1",
     "naive-ui": "^2.21.1",
     "vue": "^3.2.16",
