--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-vue": "^8.1.1",
     "naive-ui": "^2.21.1",
+    "vant": "3",
     "vue": "^3.2.16",
     "vue-eslint-parser": "^8.0.1",
     "vue-router": "^4.0.12"
@@ -24,6 +25,7 @@
     "@vitejs/plugin-vue": "^1.9.3",
     "typescript": "^4.4.3",
     "vite": "^2.6.4",
+    "vite-plugin-style-import": "^1.4.1",
     "vue-tsc": "^0.3.0"
   }
 }
